Fix `project-descriptions` overlapping with Notes & Credits text

--- a/features/project-descriptions/style.css
+++ b/features/project-descriptions/style.css
@@ -1,7 +1,7 @@
 .ai-star {
     height: 1.4rem;
     position: absolute;
-    left: 6rem;
+    margin-left: .5rem;
     cursor: pointer;
     transform: none;
     transition: transform .3s;
